<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This file is part of dcat-ap-se-processor.
  ~
  ~ dcat-ap-se-processor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ dcat-ap-se-processor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with dcat-ap-se-processor.  If not, see <https://www.gnu.org/licenses/>.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>se.af</groupId>
	<artifactId>dcat-ap-processor</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<name>dcat-ap-processor</name>
	<description>Preprocessor - DCAT-AP-SE metadata</description>
	<properties>
		<java.version>25</java.version>
		<argLine>-Dfile.encoding=UTF-8</argLine>
		<!-- For usage of dependency-check-maven replace value with valid API key: https://github.com/dependency-check/DependencyCheck -->
		<nvd.api.key>placeholder-api-key</nvd.api.key>
		<!--<spring-security.version>5.8</spring-security.version>-->
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-freemarker</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
        		<exclusion>
        		    <groupId>com.vaadin.external.google</groupId>
        		    <artifactId>android-json</artifactId>
        		</exclusion>
    	</exclusions>
		</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-resttestclient</artifactId>
    		<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-restclient</artifactId>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.commonmark</groupId>
		    <artifactId>commonmark</artifactId>
		    <version>0.22.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-rio-rdfxml -->
		<dependency>
			<groupId>org.eclipse.rdf4j</groupId>
			<artifactId>rdf4j-rio-rdfxml</artifactId>
			<version>5.3.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20251224</version>
		    <scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.owasp/dependency-check-maven -->
                <groupId>org.owasp</groupId>
              	<artifactId>dependency-check-maven</artifactId>
                <version>12.2.0</version>
                <configuration>
					<!-- Get API key from maven.properties -->
					<nvdApiKey>${nvd.api.key}</nvdApiKey>
                    <goalPrefix>dependency-check</goalPrefix>
                </configuration>
               <executions>
                  <execution>
                      <goals>
                          <goal>check</goal>
                      </goals>
                  </execution>
              </executions>
            </plugin>
		</plugins>
	</build>
</project>
